December 2023 8.6
 - Docker: upgrade to Debian 12


29.09.2023 8.5
  - Multi edit tool: allow attribute placeholders in values
  - Accessibility improvements
  - LAM Pro:
   -> Custom fields: support "\" in date regex for text fields
   -> MIT Kerberos: replaced realm setting in profile editor with user name (e.g. to be able set "$user@LAM.LOCAL")
  - Fixed bugs:
   -> Custom fields: issues when same field name is used in multiple groups, field names are now generated by LAM (235)
   -> Custom scripts: preDelete script causes error message for return code 0 (246)


06.06.2023 8.4
  - Duo 2FA: switch to frameless login and support for universal prompt
  - Docker: support for linux/arm64 (Apple Silicon)
  - Account lists: support account status in table for any account type that supports it (e.g. groups with PPolicy attributes)
  - Windows: allow to set no password expiration via account profile
  - Accessibility improvements
  - LAM Pro:
   -> PPolicy: support to edit existing policies that are not based on "device" (but e.g. on "person")
   -> SMTP server settings: settings can be tested before saving
  - Fixed bugs:
   -> Selecting entries from a filtered list selection did not work (223)
   -> Lamdaemon: support to delete home directories if "rm" command is aliased to "rm -i"
   -> Windows: "Managed by" was not changeable, account list rendering of manager/member/managedBy
   -> Tree view: allow to add entries of attribute olcModuleLoad


24.03.2023 8.3
  - PHP 8.2 compatibility
  - Windows users: display name can be hidden in server profile
  - LDAP export: sort entries by DN
  - Security: you can hide login error details in LAM's main configuration
  - 2 factor authentication: allow to remember device (must be activated in server/self service profile)
  - RPM package cleanup
  - LAM Pro:
   -> Custom scripts: new wildcard INFO.lamLoginDn for current user
   -> PPolicy: allow password policy for groups and hosts
   -> Simple security object: allow for hosts