@@ -20,9 +20,6 @@ Alias /lam /usr/share/ldap-account-manager
   <IfModule mod_cgi.c>
       Options -ExecCGI
   </IfModule>
-  <IfModule mod_php7.c>
-      php_admin_flag engine off
-  </IfModule>
   <IfModule mod_php.c>
       php_admin_flag engine off
   </IfModule>
@@ -41,9 +38,6 @@ Alias /lam /usr/share/ldap-account-manager
   Options -Indexes
   <IfModule mod_cgi.c>
       Options -ExecCGI
-  </IfModule>
-  <IfModule mod_php7.c>
-      php_admin_flag engine off
   </IfModule>
   <IfModule mod_php.c>
       php_admin_flag engine off
